--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://rei-nert.github.io'
 languageCode = 'en-us'
 title = 'Gabriel J Reinert'
 theme = 'ananke'
+[caches]
+[caches.images]
+dir = ':cacheDir/images'
