--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,68 @@
-baseURL = 'https://rei-nert.github.io'
+baseURL = 'https://reinert.page'
 languageCode = 'en-us'
 title = 'Gabriel J Reinert'
-theme = 'ananke'
+theme = 'hugo-coder'
+languagecode = "en"
+defaultcontentlanguage = "en"
 [caches]
 [caches.images]
 dir = ':cacheDir/images'
+[pagination]
+pagerSize = 20
+
+[services]
+[services.disqus]
+shortname = "yourdiscussshortname"
+
+[markup.highlight]
+style = "github-dark"
+
+[params]
+author = "Gabriel J. Reinert"
+info = "Full Stack DevOps and Doctor"
+description = "Gabriel J. Reinert personal website"
+keywords = "blog,developer,personal"
+avatarurl = "images/avatar.jpg"
+
+faviconSVG = "/img/favicon.svg"
+favicon_32 = "/img/favicon-32x32.png"
+favicon_16 = "/img/favicon-16x16.png"
+
+since = 2025
+
+enableTwemoji = true
+
+colorScheme = "auto"
+hidecolorschemetoggle = false
+
+# customCSS = ["css/custom.css"]
+# customSCSS = ["scss/custom.scss"]
+# customJS = ["js/custom.js"]
+
+[taxonomies]
+category = "categories"
+series = "series"
+tag = "tags"
+author = "authors"
+
+# Social links
+[[params.social]]
+name = "Github"
+icon = "fa-brands fa-github fa-2x"
+weight = 1
+url = "https://github.com/rei-nert/"
+#[[params.social]]
+#name = "Gitlab"
+#icon = "fa-brands fa-gitlab fa-2x"
+#weight = 2
+#url = "https://gitlab.com/rei-nert/"
+
+# Menu links
+[[menu.main]]
+name = "Blog"
+weight = 1
+url = "posts/"
+[[menu.main]]
+name = "About"
+weight = 2
+url = "about/"
