--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ style = "github-dark"
 
 [params]
 author = "Gabriel J. Reinert"
-info = "Full Stack DevOps and Doctor"
+info = "Doctor. Anesthesilogy resident. Developer"
 description = "Gabriel J. Reinert personal website"
 keywords = "blog,developer,personal"
 avatarurl = "images/avatar.jpg"
